--- a/style.css
+++ b/style.css
@@ -3,6 +3,19 @@ body {
     font-family: 'Arial', sans-serif;
 }
 
+.main-buttons-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; /* Isso espaçará igualmente os botões */
+    align-items: center; /* Isso os alinhará verticalmente */
+}
+
+.main-buttons-container .stButton > button {
+    width: 150px; /* Define uma largura fixa para todos os botões */
+    margin: 0 10px; /* Adiciona uma margem horizontal entre os botões */
+}
+
+
 /* Centralizar o conteúdo */
 .container {
     display: flex;
